Crash on entering Edit Mode of BesierCurve (with Extrude and Mirror Modifier) #65960

Closed
opened 2019-06-20 17:24:25 +02:00 by Humberto · 3 comments

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-19 18:29, hash: d30f72dfd8
Worked: (optional)

Short description of error
Blender crashes when entering Eidt Mode of a BesierCurve if there ist an Extrude value and a Mirror Modifiere active.

Exact steps for others to reproduce the error
Create Curve > Extrude Curve under "Geometry" > add a Mirror Modifiere to the Curve > press Tab to enter Edit Mode > CRASH
Crash_Curve_Demo.blend

**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-19 18:29, hash: `d30f72dfd8` Worked: (optional) **Short description of error** Blender crashes when entering Eidt Mode of a BesierCurve if there ist an Extrude value and a Mirror Modifiere active. **Exact steps for others to reproduce the error** Create Curve > Extrude Curve under "Geometry" > add a Mirror Modifiere to the Curve > press Tab to enter Edit Mode > CRASH [Crash_Curve_Demo.blend](https://archive.blender.org/developer/F7367357/Crash_Curve_Demo.blend)
Author

Added subscriber: @Hum-Bee-2

Added subscriber: @Hum-Bee-2
Clément Foucault was assigned by Brecht Van Lommel 2019-06-20 17:37:39 +02:00

This issue was referenced by b30f3f6c19

This issue was referenced by b30f3f6c19c9a791c8899d97d376df08baa3889e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#65960
No description provided.