Fix T65960 Crash on entering Edit Mode of BesierCurve with modifiers